tests/paczka1/small_fuzzy/58039792.err
Error in line 3: E6q8TdhOK S88 38,1
Error in line 7: PRo S167 21,8
